ingress/cannary/green/green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: green-svc
  name: green-svc
spec:
  ports:
  - name: tcp
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: green-deploy
  type: ClusterIP
status:
  loadBalancer: {}
