ingress/cannary/green/green-ingress.yaml
# This Ingress is used to manage the canary deployment for the green version of the application.
# 10% of the traffic will be routed to the green service.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - backend:
          service:
            name: green-svc
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
